refactor(build): 更新 ASM 库依赖 等 适配jdk25
- 将 jdk.internal.org.objectweb.asm 替换为 org.objectweb.asm
- 添加 ASM 库及其相关组件到编译依赖
- 配置 jar 任务排除 module-info.class 并包含运行时依赖
- 更新 JDK 兼容性设置为当前版本
- 移除未使用的 ConcurrentHashMap 导入
- 添加模块黑名单以避免不必要的导出
- 修复字符串模板相关的代码转换问题
- 在多个类上添加 @SuppressWarnings("removal") 注解以处理删除的API
- 优化 JNI 相关内存分配方法的调用
- 调整反射相关代码以提高稳定性